Cart icon updated

--- a/cholavaram-fruits-website/index.html
+++ b/cholavaram-fruits-website/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cholavaram Fresh Fruits - Home</title>
+    <title>Shoolavaram Fresh Fruits - Home</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,35 +13,29 @@
 
     <header>
         <div class="container">
-            <a href="#" class="logo">Cholavaram Fresh 🥭</a>
-            <nav>
-                <a href="#">Shop All</a>
-                <a href="#">Seasonal</a>
-                <a href="#contact">Contact</a>
-            </nav>
+            <a href="#" class="logo">Shoolavaram Fresh 🥭</a>
             <div class="header-icons">
-                <a href="#" class="cart-icon" id="cart-icon">🛒 <span id="cart-count" class="cart-count">0</span></a>
+                <div class="pincode-checker-header">
+                    <input type="text" id="pincode-input" placeholder="Pincode...">
+                    <button id="pincode-btn">Check</button>
+                </div>
+                <a href="#" class="cart-icon" id="cart-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
+                    <span id="cart-count" class="cart-count">0</span>
+                </a>
             </div>
         </div>
     </header>
 
     <main>
         <div class="container">
-            <section class="hero-banner">
-                <h1>Fresh Fruits, Delivered Daily</h1>
-                <p>Sourced from local farms around Cholavaram. Order today!</p>
-                <div class="pincode-checker">
-                    <input type="text" id="pincode-input" placeholder="Enter your pincode...">
-                    <button id="pincode-btn">Check Delivery</button>
-                </div>
-            </section>
             <section class="product-section">
                 <h2>Our Freshest Picks</h2>
                 <div class="product-grid"></div>
             </section>
             <section id="contact" class="contact-section">
                 <h2>Get in Touch</h2>
-                <p>Have questions? We'd love to hear from you. We deliver across Cholavaram and nearby areas.</p>
+                <p>Have questions? We'd love to hear from you. We deliver across Shoolavaram and nearby areas.</p>
                 <div class="contact-details">
                     <div class="contact-item">
                         <strong>WhatsApp:</strong> <a href="https://wa.me/918098000107" target="_blank">+91 80980 00107</a>
@@ -59,7 +53,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Cholavaram Fresh Fruits. All Rights Reserved.</p>
+            <p>&copy; 2025 Shoolavaram Fresh Fruits. All Rights Reserved.</p>
             <div class="footer-admin-link">
                 <a href="login.html">Admin Login</a>
             </div>
@@ -105,7 +99,7 @@
                 <div id="store-pickup-info" class="form-group hidden">
                     <label>Pickup Location</label>
                     <div class="info-box">
-                        <p><strong>Cholavaram Fresh Fruits</strong></p>
+                        <p><strong>Shoolavaram Fresh Fruits</strong></p>
                         <p>No.8, Moogambikai nagar, Sembulivaram</p>
                     </div>
                 </div>
