--- a/cholavaram-fruits-website/admin.html
+++ b/cholavaram-fruits-website/admin.html
@@ -73,59 +73,23 @@
                 <div id="add-product-view" class="hidden">
                     <div class="form-container">
                         <form id="product-form">
-                            <div class="form-group">
-                                <label for="product-name">Product Name</label>
-                                <input type="text" id="product-name" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="product-description">Product Description</label>
-                                <textarea id="product-description" rows="4"></textarea>
-                            </div>
-                            <div class="form-group">
-                                <label for="product-image">Product Images (up to 4)</label>
-                                <input type="file" id="product-image" accept="image/*" multiple>
-                            </div>
+                            <div class="form-group"><label for="product-name">Product Name</label><input type="text" id="product-name" required></div>
+                            <div class="form-group"><label for="product-description">Product Description</label><textarea id="product-description" rows="4"></textarea></div>
+                            <div class="form-group"><label for="product-image">Product Images (up to 4)</label><input type="file" id="product-image" accept="image/*" multiple></div>
                             <div class="form-row">
-                                 <div class="form-group">
-                                    <label for="product-actual-price">Actual Price (MRP)</label>
-                                    <input type="number" id="product-actual-price">
-                                </div>
-                                <div class="form-group">
-                                    <label for="product-price">Offer Price (₹)</label>
-                                    <input type="number" id="product-price" required>
-                                </div>
-                                <div class="form-group">
-                                    <label for="product-unit">Unit</label>
-                                    <select id="product-unit">
-                                        <option value="kg">Kilogram (kg)</option>
-                                        <option value="piece">Piece</option>
-                                        <option value="box">Box</option>
-                                        <option value="dozen">Dozen</option>
-                                    </select>
-                                </div>
+                                <div class="form-group"><label for="product-actual-price">Actual Price (MRP)</label><input type="number" id="product-actual-price" step="0.01"></div>
+                                <div class="form-group"><label for="product-price">Offer Price (₹)</label><input type="number" id="product-price" step="0.01" required></div>
+                                <div class="form-group"><label for="product-unit">Unit</label><select id="product-unit"><option value="kg">Kilogram (kg)</option><option value="piece">Piece</option><option value="box">Box</option><option value="dozen">Dozen</option></select></div>
                             </div>
-                            <div class="form-group-checkbox">
-                                <input type="checkbox" id="product-out-of-stock">
-                                <label for="product-out-of-stock">Mark as Out of Stock</label>
-                            </div>
-                            <div class="form-actions">
-                                <button type="submit" class="save-btn">Save Product</button>
-                            </div>
+                            <div class="form-group-checkbox"><input type="checkbox" id="product-out-of-stock"><label for="product-out-of-stock">Mark as Out of Stock</label></div>
+                            <div class="form-actions"><button type="submit" class="save-btn">Save Product</button></div>
                         </form>
                     </div>
                 </div>
                 <div id="view-products-view">
                     <div class="table-container">
                         <table id="products-table">
-                            <thead>
-                                <tr>
-                                    <th>Image</th>
-                                    <th>Name</th>
-                                    <th>Offer Price</th>
-                                    <th>Actual Price</th>
-                                    <th>Status</th> <th>Actions</th>
-                                </tr>
-                            </thead>
+                            <thead><tr><th>Image</th><th>Name</th><th>Offer Price</th><th>Actual Price</th><th>Status</th><th>Actions</th></tr></thead>
                             <tbody></tbody>
                         </table>
                     </div>
@@ -133,10 +97,23 @@
             </section>
 
             <section id="orders-section" class="hidden">
-                 </section>
+                <header class="main-header"><h2>Recent Orders</h2></header>
+                <div class="tabs">
+                    <button id="open-orders-tab" class="tab-btn active" data-color="blue">Open Orders</button>
+                    <button id="closed-orders-tab" class="tab-btn" data-color="green">Closed Orders</button>
+                </div>
+                <div id="orders-list-container"></div>
+            </section>
 
             <section id="customers-section" class="hidden">
-                </section>
+                <header class="main-header"><h2>Customers</h2></header>
+                <div class="table-container">
+                    <table id="customers-table">
+                        <thead><tr><th>Name</th><th>Phone</th><th>Address</th></tr></thead>
+                        <tbody></tbody>
+                    </table>
+                </div>
+            </section>
         </main>
     </div>
 
